syntax = "proto3";
import "common/transaction.proto";
import "common/account.proto";
import "common/transfer.proto";
import "google/protobuf/empty.proto";

option csharp_namespace = "AccountsWriteMicroservice";

package AccountsMicroservice;

service AccountsWrite {
  rpc Transfer (TransferRequest) returns (TransferResponse);
  rpc BatchTransfer (BatchTransferRequest) returns (google.protobuf.Empty);
  rpc Setup(SetupRequest) returns (google.protobuf.Empty);
  rpc SetupAppend(SetupRequest) returns (google.protobuf.Empty);
}

message TransferRequest {
  Transfer transfer = 1;
}

message TransferResponse {
  Transaction transaction = 1;
}

message BatchTransferRequest {
  repeated Transfer transfers = 1;
}

message SetupRequest {
  repeated Account accounts = 1;
}